--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,7 @@ body {
     border-color: #444444;
     box-shadow:0 0 10px 5px #333333;
     width: 70%;
-    height: 70%;
+    height: 80%;
 }
 
 .window-pane {
